# queztl-core

./: .env.email  3DMARK_STANDALONE_GUIDE.md  3DMARK_STANDALONE_QUICKREF.md  3D_TEST_CHECKLIST.md  5X_TEST_REPORT_20251207_154328.md  AGILE_QUICKSTART.md  AIOSC_ARCHITECTURE.md  ANDROID_BUILD_INSTRUCTIONS.sh  AUTONOMOUS_AGENT_COMPLETE.md  AUTONOMOUS_AGENT_GUIDE.md  AUTONOMOUS_SYSTEM_STATUS.md  BEAST_MODE_GUIDE.md  BENCHMARK_ENHANCEMENTS.md  BETA_1_PRODUCTION_READY.md  BETA_1_README.md  BILINGUAL_STATUS.md  BLENDER_CONNECTOR_COMPLETE.md  BLENDER_PERFORMANCE_COMPARISON.md  BLENDER_QUICKSTART.md  BUILD_SUMMARY.md  CHANGELOG.md  CLARITY_SOFTWARE_GPU_ONLY.md  CLEANUP_SUMMARY_20251207_122302.md  CLOUD_DEPLOYMENT_CONFIG.json  COMPILATION_EXPLAINED.md  COMPLETE_SYSTEM_SPECS.md  DEMO_COMPLETE.md  DEMO_INDEX.md  DEMO_QUICKSTART.md  DEMO_READY.md  DEMO_SUMMARY.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS_DEC9.md  DEPLOY_CHECKLIST.md  DEPLOY_FINAL_INSTRUCTIONS.md  DEPLOY_STATUS.md  DISTRIBUTED_DEPLOY_GUIDE.md  Dockerfile  Dockerfile.build  EVERYTHING_IS_READY.md  (+248 more)
3d-showcase-deploy/: benchmark.html  demos.html  home.html  index.html  login.html  netlify.toml
404/: index.html
QuetzalGISStudio/: ANDROID_BUILD_GUIDE.md  README.md  build.gradle  gradlew  settings.gradle
backend/: advanced_workloads.py  ai_swarm.py  autoscaler.py  database.py  distributed_network.py  email_forwarding.py  email_service.py  gen3d_workload.py  geophysics_engine.py  gis_engine.py  main.py  (+50 more)
backup_before_rename_20251207_171939/backup_before_rename_20251207_171939/quetzalcore-hypervisor/core/: Cargo.toml
(+333 files in other folders)
