[package]
name = "quetzalcore-hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
kvm-ioctls = "0.16"
kvm-bindings = "0.7"
vmm-sys-util = "0.12"
vm-memory = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
